--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -755,7 +755,7 @@ color_schemes:
 
 input_mapping:
     - { mods: [Control],        mouse: Left,        action: FollowHyperlink }
-    - { mods: [],               mouse: Middle,      action: PasteSelection }
+    - { mods: [],               mouse: Middle,      action: PasteSelection, mode: 'Insert'}
     - { mods: [],               mouse: WheelDown,   action: ScrollDown }
     - { mods: [],               mouse: WheelUp,     action: ScrollUp }
     - { mods: [Alt],            key: Enter,         action: ToggleFullscreen }
