update of configs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -68,7 +68,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 1
-    gaps_out = 1
+    gaps_out = 5
 
     border_size = 1
 
@@ -77,7 +77,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -173,6 +173,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, C, exec, $terminal
+bind = $mainMod, W, exec, firefox
 bind = $mainMod, E, exec, $emacs
 bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, M, exit,
