--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -253,6 +253,18 @@ profiles:
             columns: 100
             lines: 30
 
+        # Window margins
+        #
+        # The margin values are applied on both sides and are given in pixels
+        # with DPI yet to be applied to these values.
+        margins:
+            # Horizontal (left/right) margins.
+            horizontal: 0
+            # Vertical (top/bottom) margins.
+            vertical: 0
+
+
+
         history:
             # Number of lines to preserve (-1 for infinite).
             limit: 1000000
