fix font config on Green

--- a/config/contour/contour_macos.yml
+++ b/config/contour/contour_macos.yml
@@ -335,7 +335,7 @@ profiles:
 
             regular:
                 #family: "SFMono"
-                family: "MonaspiceKrNerdFont"
+                family: "MonaspiceKr Nerd Font"
                 #family: "cascadiaCode"
                 #family: "JetBrainsMono Nerd Font"
 
