--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -338,7 +338,7 @@ profiles:
                 weight: normal
                 slant: normal
                 features: [dlig]
-                #fallback: [ "Unifont", "JuliaMono" ]
+                fallback: [ "Unifont", "JuliaMono" ]
 
             # If bold/italic/bold_italic are not explicitly specified, the regular font with
             # the respective weight and slant will be used.
@@ -417,7 +417,7 @@ profiles:
 
             indicator:
                 left: "{InputMode:Bold,Color=#FFFF00}{SearchPrompt:Left= │ }{TraceMode:Bold,Color=#FFFF00,Left= │ }{ProtectedMode:Bold,Left= │ }"
-                middle: "{Tabs}{Title:Left= « ,Right= » } {Clock:Bold} "
+                middle: "{Tabs:ActiveColor=#000000,ActiveBackground=#00cd00}{Title:Left= « ,Right= » } {Clock:Bold} "
                 right: " {HistoryLineCount:Faint,Color=#000000}"
 
         # Background configuration
