--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -338,7 +338,7 @@ profiles:
                 weight: normal
                 slant: normal
                 features: [dlig]
-                fallback: [ "Unifont", "JuliaMono" ]
+                #fallback: [ "Unifont", "JuliaMono" ]
 
             # If bold/italic/bold_italic are not explicitly specified, the regular font with
             # the respective weight and slant will be used.
