--- a/config/contour/contour_macos.yml
+++ b/config/contour/contour_macos.yml
@@ -270,7 +270,7 @@ profiles:
 
         history:
             # Number of lines to preserve (-1 for infinite).
-            limit: 1000
+            limit: 10000
             # Boolean indicating whether or not to scroll down to the bottom on screen updates.
             auto_scroll_on_update: true
             # Number of lines to scroll on ScrollUp & ScrollDown events.
@@ -422,7 +422,7 @@ profiles:
             sync_to_window_title: false
 
             indicator:
-                left: "{InputMode:Bold,Color=#FFFF00}{SearchPrompt:Left= │ }{TraceMode:Bold,Color=#FFFF00,Left= │ }{ProtectedMode:Bold,Left= │ }"
+                left: "{Tabs:ActiveColor=#000000,ActiveBackground=#00cd00} {InputMode:Bold,Color=#FFFF00}{SearchPrompt:Left= │ }{TraceMode:Bold,Color=#FFFF00,Left= │ }{ProtectedMode:Bold,Left= │ }"
                 middle: "{Title:Left= « ,Right= » } {Clock:Bold} "
                 right: " {HistoryLineCount:Faint,Color=#000000}"
 
@@ -781,11 +781,11 @@ input_mapping:
     - { mods: [Control],        key: W,             action: CloseTab }
     - { mods: [Control],        key: Q,             action: SwitchToTabLeft }
     - { mods: [Control],        key: E,             action: SwitchToTabRight }
-    - { mods: [Alt],            key: 1,             action: SwitchToTab, position: 1 }
-    - { mods: [Alt],            key: 2,             action: SwitchToTab, position: 2 }
-    - { mods: [Alt],            key: 3,             action: SwitchToTab, position: 3 }
-    - { mods: [Alt],            key: 4,             action: SwitchToTab, position: 4 }
-    - { mods: [Alt],            key: 5,             action: SwitchToTab, position: 5 }
-    - { mods: [Alt],            key: 6,             action: SwitchToTab, position: 6 }
+    - { mods: [Control],            key: 1,             action: SwitchToTab, position: 1 }
+    - { mods: [Control],            key: 2,             action: SwitchToTab, position: 2 }
+    - { mods: [Control],            key: 3,             action: SwitchToTab, position: 3 }
+    - { mods: [Control],            key: 4,             action: SwitchToTab, position: 4 }
+    - { mods: [Control],            key: 5,             action: SwitchToTab, position: 5 }
+    - { mods: [Control],            key: 6,             action: SwitchToTab, position: 6 }
     #- { mods: [Control],        key: o,             action: WriteScreen, chars: '\033[?4h \033[1 p'}
       #- { mods: [Control],        key: p,             action: WriteScreen, chars: '\033[?4h \033[9 p'}
