add tmux profile

--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -447,6 +447,10 @@ profiles:
     large:
         terminal_size:
             columns: 120
+
+    tmux_shell:
+        shell: "tmux"
+
 # Color Profiles
 # --------------
 #
