--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,8 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+monitor = DP-1, 3840x2160@60, 0x0 , 1.7
 
 ###################
 ### MY PROGRAMS ###
@@ -45,9 +44,9 @@ $menu = rofi -show combi
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
+exec-once = terminal
 exec-once = hyprpaper
-exec-once = wlr-randr --output HDMI-A-1 --off
+exec-once = wlr-randr --output DP-1 --off
 exec-once = waybar & firefox
 
 #############################
@@ -56,8 +55,7 @@ exec-once = waybar & firefox
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,18
 
 #####################
 ### LOOK AND FEEL ###
@@ -93,11 +91,6 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 0.9
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
@@ -118,17 +111,20 @@ dwindle {
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_is_master = true
-}
-
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
+# toolkit-specific scale
+env = GDK_SCALE, 1.7
+env = XCURSOR_SIZE,32
 
 #############
 ### INPUT ###
@@ -172,9 +168,9 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, C, exec, $terminal
+bind = $mainMod, C, exec, contour
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, E, exec, $emacs
+bind = $mainMod, E, exec, emacs
 bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
@@ -191,7 +187,6 @@ bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
