--- a/config/waybar/config
+++ b/config/waybar/config
@@ -10,7 +10,7 @@
 
     "group/usage": {
         "orientation": "horizontal",
-        "modules": ["memory", "cpu", "wireplumber", "custom/vpn", "network", "tray"]
+        "modules": ["memory", "cpu", "custom/vpn", "network", "tray"]
     },
 
     "hyprland/workspaces": {
@@ -32,20 +32,9 @@
         "format": "{:%d.%m.%Y | %H:%M:%S}"
     },
 
-    "wireplumber": {
-        "format": "\udb81\udd7e  {volume}%",
-        "max-volume": 100,
-        "scroll-step": 5
-    },
-
-
     "memory": {
         "interval": 30,
         "format": "\uf4bc  {used:0.1f}G "
-    },
-
-    "temperature": {
-        "format": " {temperatureC}°C"
     },
 
     "cpu": {
@@ -69,8 +58,8 @@
     },
 
     "custom/vpn": {
-                  "format": "{}",
-                  "exec": "curl -s www.icanhazip.com",
+                  "format": " {}",
+                  "exec": "curl -s ipv4.icanhazip.com",
                   "interval": 30
     },
 
