--- a/config/contour/contour.yml
+++ b/config/contour/contour.yml
@@ -345,7 +345,8 @@ profiles:
                 weight: normal
                 slant: normal
                 features: [dlig]
-                #fallback: [ "Unifont", "JuliaMono" ]
+                #fallback: [ "Unifont" ]
+                fallback: [ "Unifont", "JuliaMono" ]
 
             # If bold/italic/bold_italic are not explicitly specified, the regular font with
             # the respective weight and slant will be used.
@@ -809,10 +810,10 @@ input_mapping:
     - { mods: [Control, Shift], key: 'H',           action: NoSearchHighlight }
     - { mods: [],               key: 'F3',          action: FocusNextSearchMatch }
     - { mods: [Shift],          key: 'F3',          action: FocusPreviousSearchMatch }
-    - { mods: [Alt],            key: N,             action: CreateNewTab }
-    - { mods: [Alt],            key: W,             action: CloseTab }
-    - { mods: [Alt],            key: Q,             action: SwitchToTabLeft }
-    - { mods: [Alt],            key: E,             action: SwitchToTabRight }
+    - { mods: [Alt],            key: n,             action: CreateNewTab }
+    - { mods: [Alt],            key: w,             action: CloseTab }
+    - { mods: [Alt],            key: q,             action: SwitchToTabLeft }
+    - { mods: [Alt],            key: e,             action: SwitchToTabRight }
     - { mods: [Alt],            key: 1,             action: SwitchToTab, position: 1 }
     - { mods: [Alt],            key: 2,             action: SwitchToTab, position: 2 }
     - { mods: [Alt],            key: 3,             action: SwitchToTab, position: 3 }
