--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -45,7 +45,6 @@ $menu = rofi -show combi
 # Or execute your favorite apps at launch like this:
 
 exec-once = terminal
-exec-once = hyprpaper
 exec-once = wlr-randr --output DP-1 --off
 exec-once = waybar & firefox
 
@@ -212,9 +211,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -222,11 +221,3 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-#windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
