--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 3840x2160@60, 0x0 , 1.7
+monitor = DP-1, 3840x2160@60.00, 0x0 , 1.6
 
 ###################
 ### MY PROGRAMS ###
@@ -46,6 +46,7 @@ $menu = rofi -show combi
 
 exec-once = terminal
 exec-once = wlr-randr --output DP-1 --off
+exec-once = hyprpaper
 exec-once = waybar & firefox
 
 #############################
@@ -112,7 +113,7 @@ dwindle {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -221,3 +222,4 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+windowrule = opacity 1.0 override 1.0 override 0.8 override, class:firefox
