--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 3840x2160@60.00, 0x0 , 1.6
+monitor = DP-1, 3840x2160@60.00, 0x0 , 1.2
 
 ###################
 ### MY PROGRAMS ###
@@ -175,7 +175,8 @@ bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, page_up, exec, pamixer -i 1,
+bind = $mainMod, page_down, exec, pamixer -d 1,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
