--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,6 +23,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-1, 3840x2160@60.00, 0x0 , 1.2
+monitor = DP-2, preferred, auto, 1.2
 
 ###################
 ### MY PROGRAMS ###
@@ -115,6 +116,7 @@ dwindle {
 misc { 
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    focus_on_activate = true
 }
 
 # unscale XWayland
@@ -184,6 +186,19 @@ bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
+
+workspace=1, monitor:DP-1
+workspace=2, monitor:DP-1
+workspace=3, monitor:DP-1
+workspace=4, monitor:DP-1
+
+workspace=5, monitor:DP-2
+workspace=6, monitor:DP-2
+workspace=7, monitor:DP-2
+workspace=8, monitor:DP-2
+
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -193,8 +208,6 @@ bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -205,8 +218,6 @@ bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 
 bindm = $mainMod, mouse:272, movewindow
