--- a/config/waybar/config
+++ b/config/waybar/config
@@ -17,14 +17,7 @@
         "format": "{name}",
         "on-click": "activate",
         "icon-size": 10,
-        "sort-by-number": true,
-        "persistent-workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": [],
-        }
+        "sort-by-number": true
     },
 
     "clock": {
