--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -226,7 +226,7 @@ bindm = $mainMod, mouse:273, resizewindow
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
+windowrule = opacity 1.0 override, match:class firefox
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-windowrule = opacity 1.0 override 1.0 override 0.8 override, class:firefox
